# ai-agent-backend

./: .cursorrule  .cursorrules  .env.example  README.md  index.html  main.py  pyproject.toml  requirements.txt  test.py  test1.py
src/: models.py
src/agents/: deepseek_agent.py  gemini.py  githubgpt_agent.py  gpt4o.py  openai_agent.py
src/ai_model/: gpt40.py
src/api/endpoints/: chat.py
src/api/endpoints/google_auth/: routes.py
src/auth/: google_oauth.py
src/core/: prompts.py
src/models/: gemini.py
src/services/: chat_service.py  weather_service.py
src/tools/: aboutme_tool.py  time_tool.py
src/tools/datetime/: time_tool.py
src/tools/google/: __init__.py  create_event_tool.py  create_task_tool.py  get_events_tool.py  get_tasks_tool.py
src/tools/weather/: weather_service.py  weather_tool.py
src/tools/websearch/: websearch_tool.py
src/utils/: event_utils.py  gemini_streaming.py  gpt4o_streaming.py  logger.py  prompts.py  task_utils.py  time_utils.py
src/utils/prompt/: event_prompts.py  task_prompts.py
src/utils/task/: task_prompts.py
