[tool.poetry]
name = "ai-agent-backend"
version = "0.1.0"
description = "A FastAPI-based backend system that creates an AI agent capable of interacting with various services and automating tasks using LangChain and other tools."
authors = ["Prem Acharya"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.0"
httpx = "0.26.0"
fastapi = "0.115.8"
langchain-community = "0.3.18"
langchain = "0.3.19"
langchain-core = "0.3.39"
openai = "1.64.0"
pydantic-settings = "2.8.0"
uvicorn = "0.34.0"
langchain-openai = "0.3.7"
langgraph = "0.2.56"
langgraph-sdk = "0.1.53"
langgraph-checkpoint = "2.0.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"